#1308: Modernized COMMAND_SECURITY_DEFINITION